2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-plugins.c (subscribe): 
	(unsubscribe): be more verbose - not only debug.

	* src/file-server.c (file_server_monitor_file): 
	(file_server_wake_up): use st_size, not st_mtime.

	also include libprelude/timer.h

2002-04-27  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* file-server.c: (read_logfile): 
	use clearerr_unlocked() after hitting EOF on observed file. 
	Fixes problem on FreeBSD. 

2002-04-27  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>
	
	* plugins/simple/ruleset/ipfw.rules: new file. Rules for ipfw
	firewall on FreeBSD.

	* plugins/simple/ruleset/simple.rules: include ipfw.rules

2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/log-plugins.c (subscribe): 
	(unsubscribe): be more verbose about subscribed plugins.

	* src/file-server.c: include timer.h.

	* plugins/simple/simple.c: 
	(parse_ruleset): 
	make rulesnum global, this is because of the way we parse include.

	(filter_string): fix off by one error resulting in trailing whitespace
	not being removed.

	(set_simple_ruleset): move the printf telling number of rules loaded
	here, so that we don't get duplicate printf() for each included file.

2002-04-27  Laurent Oudot  <oudot.laurent@wanadoo.fr>

	* plugins/simple/ruleset/simple.rules:
	Added include directive for specific rules in cisco.rules and
	zyxel.rules.
	The include directive is very cool because it will help at maintaining
	the rules (if you don't need for example zyxel rules, you can put a
	simple # character before the include directive). 
	
	* plugins/simple/ruleset/cisco.rules:
	New file dedicated to cisco rules.
	
	* plugins/simple/ruleset/zyxel.rules:
	New file dedicated to zyxel rules.

2002-04-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/file-server.c (file_server_monitor_file): 
	use calloc() to allocate the monitor_fd_t object.
	This fix a possible unitialized read.

	* plugins/simple/simple.c (parse_include): 